<resources>
    <string name="app_name">Snap Solve Sudoku</string>
    <string name="app_version">2.0.1</string>
    <string name="app_package">com.beebeeoii.snapsolvesudoku</string>
    <string name="dev_name">Jia Wei</string>
    <string name="dev_nick">Beebeeoii</string>
    <string name="dev_email">b33b33o11@gmail.com</string>


    <!-- Firebase -->
    <string name="firebase_collection_report_inaccuracy">inaccurate_board</string>
    <string name="firebase_collection_feature_requests">feature_requests</string>
    <string name="firebase_collection_ENV_VAR">ENV_VAR</string>
    <string name="firebase_collection_ENV_VAR_document_github">GITHUB</string>
    <string name="firebase_collection_reviews">reviews</string>
    <!-- Firebase -->


    <!-- URLs -->
    <string name="github_profile_page">https://github.com/Beebeeoii</string>
    <string name="github_project_main">https://github.com/Beebeeoii/SnapSolveSudoku</string>
    <string name="github_project_faq">https://github.com/Beebeeoii/SnapSolveSudoku/blob/v2/FAQ.md</string>
    <string name="github_project_features">https://github.com/Beebeeoii/SnapSolveSudoku/blob/v2/UPCOMING_FEATURES.md</string>
    <!-- URLs -->


    <!-- Permissions -->
    <string name="request_storage_permission_title">Storage Permissions</string>
    <string name="request_storage_permission_message">Please grant storage permission from settings</string>
    <string name="request_storage_permission_rationale">Storage read/write is needed for sudoku board digit recognition</string>
    <string name="request_camera_permission_title">Camera Permission</string>
    <string name="request_camera_permission_message">Please grant camera permission from settings</string>
    <string name="request_camera_permission_rationale">Camera is needed to take pictures of sudoku boards</string>
    <string name="permission_rationale_understand_text">I understand</string>
    <string name="grant_permission_text">Grant</string>
    <string name="grant_permission_later_text">Later</string>

    <!-- Main Fragment -->
    <string name="main_frag_history_button_title">History</string>
    <string name="main_frag_history_button_description">View previously scanned sudoku boards</string>
    <string name="main_frag_settings_button_title">Settings</string>
    <string name="main_frag_settings_button_description">Settings</string>
    <string name="main_frag_solve_button_text">Solve</string>
    <string name="main_frag_clear_board_button_tooltip">Clear Board</string>
    <string name="main_frag_clear_cell_button_tooltip">Clear Cell</string>
    <string name="main_frag_solve_button_tooltip">Solve Board</string>
    <string name="main_frag_details_button_tooltip">View Details</string>
    <string name="main_frag_share_button_tooltip">Share Board</string>
    <string name="main_frag_import_button_text">Import</string>
    <string name="main_frag_input_1_button_text">1</string>
    <string name="main_frag_input_2_button_text">2</string>
    <string name="main_frag_input_3_button_text">3</string>
    <string name="main_frag_input_4_button_text">4</string>
    <string name="main_frag_input_5_button_text">5</string>
    <string name="main_frag_input_6_button_text">6</string>
    <string name="main_frag_input_7_button_text">7</string>
    <string name="main_frag_input_8_button_text">8</string>
    <string name="main_frag_input_9_button_text">9</string>
    <!-- Main Fragment -->


    <!-- Camera Fragment -->
    <string name="camera_frag_hint">Please centralise the sudoku board</string>
    <string name="camera_frag_capture_button">Capture</string>
    <!-- Camera Fragment -->


    <!-- Details Fragment -->
    <string name="details_frag_title">Details</string>
    <string name="details_frag_board_tracker_default">1/1</string>

    <string name="details_chip_board">Board</string>
    <string name="details_chip_statistics">Statistics</string>
    <string name="details_chip_more_details">More Details</string>

    <string name="details_statistics_no_hints_title"><u>No. of Hints</u></string>
    <string name="details_statistics_no_solutions_title"><u>No. of Solutions</u></string>
    <string name="details_statistics_time_taken_to_solve_title"><u>Time Taken to Solve (ms)</u></string>

    <string name="details_more_details_unique_id_title"><u>Unique ID</u></string>
    <string name="details_more_details_folder_path_title"><u>Folder Path</u></string>
    <string name="details_more_details_original_picture_title"><u>Original Picture Path</u></string>
    <string name="details_more_details_processed_picture_title"><u>Processed Picture Path</u></string>
    <string name="details_more_details_solutions_title"><u>Solutions Path</u></string>


    <!-- Settings Fragment -->
    <string name="settings_frag_title">Settings</string>
    <string name="settings_frag_about_button_title">About</string>
    <string name="settings_frag_about_button_description">About</string>
    <!-- Category 1 -->
    <string name="pref_cat_1_title">General</string>
    <string name="pref_cat_1_max_sols_title">Maximum Solutions</string>
    <!-- Category 2 -->
    <string name="pref_cat_2_title">Digit Recognition Engine</string>
    <string name="pref_cat_2_check_for_update_title">Check for update</string>
    <string name="pref_cat_2_check_for_update_subtitle">Update digit recognition model</string>
    <!-- Settings Fragment -->


    <!-- About Fragment -->
    <string name="about_frag_title">About</string>
    <string name="about_frag_developer">Developer</string>

    <string name="about_frag_support">Support</string>
    <string name="about_frag_rate_title">Rate</string>
    <string name="about_frag_rate_subtitle">Rate me on Playstore</string>
    <string name="about_frag_github_title">Github</string>
    <string name="about_frag_github_subtitle">Follow and fork this project on Github</string>
    <string name="about_frag_donate_title">Donate</string>
    <string name="about_frag_donate_subtitle">Contribute in a financial way</string>
    <string name="about_frag_share_title">Share</string>
    <string name="about_frag_share_subtitle">Spread the word</string>
    <string name="about_frag_report_bugs_title">Report bugs</string>
    <string name="about_frag_report_bugs_subtitle">Spray some insecticide</string>
    <string name="about_frag_feature_request_title">Feature Request</string>
    <string name="about_frag_feature_request_subtitle">Leave some thoughts here</string>

    <string name="about_frag_miscellaneous_title">Miscellaneous</string>
    <string name="about_frag_faq_title">FAQ</string>
    <string name="about_frag_faq_subtitle">Seek assistance</string>
    <string name="about_frag_changelog_title">Changelog</string>
    <string name="about_frag_changelog_subtitle">View what\'s new</string>
    <string name="about_frag_planned_features_title">Planned Features</string>
    <string name="about_frag_planned_features_subtitle">Sneak peak into the future</string>
    <string name="about_frag_oss_title">Open source libraries</string>
    <string name="about_frag_oss_subtitle">Without which, this project would not be possible</string>
    <!-- About Fragment -->


    <!-- Donate Fragment -->
    <string name="donate_frag_title">Donate</string>
    <string name="donate_frag_cup_of_coffee">Cup of Coffee</string>
    <string name="donate_frag_cup_of_coffee_price">$0.99</string>
    <string name="donate_frag_slice_of_cake">Slice of Cake</string>
    <string name="donate_frag_slice_of_cake_price">$1.99</string>
    <string name="donate_frag_slice_of_pizza">Slice of Pizza</string>
    <string name="donate_frag_slice_of_pizza_price">$3.99</string>
    <string name="donate_frag_cup_of_wine">Cup of Wine</string>
    <string name="donate_frag_cup_of_wine_price">$6.99</string>
    <!-- Donate Fragment -->


    <!-- Dialog Feature Requests -->
    <string name="dialog_feature_requests_title">Feature Request</string>
    <string name="dialog_feature_requests_input_hint">Request</string>
    <string name="dialog_feature_requests_submit_button_text">Submit</string>
    <!-- Dialog Feature Requests -->


    <!-- Dialog Report Inaccuracy Requests -->
    <string name="dialog_report_inaccuracy_title">Report Inaccuracy</string>
    <string name="dialog_report_inaccuracy_input_hint">Additional comments (optional)</string>
    <string name="dialog_report_inaccuracy_submit_button_text">Submit</string>
    <!-- Dialog Feature Requests -->


    <!-- Dialog Solving Board -->
    <string name="dialog_solving_board_title">Solving Board</string>
    <!-- Dialog Feature Requests -->


    <!-- Dialog Import Picture Requests -->
    <string name="dialog_import_picture_title">Import Picture</string>
    <string name="dialog_import_picture_use_camera">Use Camera</string>
    <string name="dialog_import_picture_open_gallery">Open from Gallery</string>
    <!-- Dialog Import Picture Requests -->


    <!-- Dialog Update Model Requests -->
    <string name="dialog_update_model_title">Model Update</string>
    <string name="dialog_update_model_no_updates_available">No Updates Available</string>
    <string name="dialog_update_model_close_dialog">Close</string>
    <!-- Dialog Update Model Requests -->
</resources>
