<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/report_inaccuracy_dialog_loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_inaccuracy_dialog_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/report_inaccuracy_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/dialog_report_inaccuracy_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/report_inaccuracy_dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_report_inaccuracy_input_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_inaccuracy_dialog_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/report_inaccuracy_dialog_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_report_inaccuracy_submit_button_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_inaccuracy_dialog_input"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>