<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/donateFragmentConstraintLayout"
    tools:context=".fragments.DonateFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/donate_frag_title"
            app:titleTextColor="@color/colorPrimaryDark"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back_24dp"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/donateCoffee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:strokeWidth="3dp"
        app:strokeColor="@color/colorPrimaryDark"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintRight_toLeftOf="@id/donateCake"
        app:layout_constraintBottom_toTopOf="@id/donatePizza">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donateCoffeeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_cup_of_coffee"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/donateCoffeeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cup_of_coffee_black_24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateCoffeeTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donateCoffeePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_cup_of_coffee_price"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateCoffeeIcon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/donateCake"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:strokeWidth="3dp"
        app:strokeColor="@color/colorPrimaryDark"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintLeft_toRightOf="@id/donateCoffee"
        app:layout_constraintBottom_toTopOf="@id/donateWine">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donateCakeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_slice_of_cake"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/donateCakeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cake_24px"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateCakeTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donateCakePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_slice_of_cake_price"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateCakeIcon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/donatePizza"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:strokeWidth="3dp"
        app:strokeColor="@color/colorPrimaryDark"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donateCoffee"
        app:layout_constraintRight_toLeftOf="@id/donateWine"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donatePizzaTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_slice_of_pizza"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/donatePizzaIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_slice_of_pizza_24px"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donatePizzaTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donatePizzaPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_slice_of_pizza_price"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donatePizzaIcon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/donateWine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:strokeWidth="3dp"
        app:strokeColor="@color/colorPrimaryDark"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donateCake"
        app:layout_constraintLeft_toRightOf="@id/donatePizza"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donateWineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_cup_of_wine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/donateWineIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cup_of_wine_24px"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateWineTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donateWinePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_frag_cup_of_wine_price"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donateWineIcon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>